[build-system]
requires = [ "scikit-build-core", "pybind11@git+https://github.com/pybind/pybind11.git@master"]
build-backend = "scikit_build_core.build"

[project]
name = "panda-python"
version = "0.8.1"
description = "Python bindings for the Panda robot"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "trio"
    ]
authors = [
    { name = "Jean Elsner", email = "jean.elsner@tum.de" },
]
license = {file = "LICENSE"}
readme = "README.md"
keywords = ["python", "real-time", "control", "robot", "franka", "emika"]
classifiers = [
        "Intended Audience :: Science/Research",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: Apache Software License",
        "Topic :: Scientific/Engineering",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
examples = [
    "gello@git+https://github.com/jc211/gello.git"
]


[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
build = [ "cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*", "cp312-*",]
skip = [ "pp*", "*musllinux*",]
environment = "LIBFRANKA_VER=0.13.3"

[tool.cibuildwheel.linux]
before-all = [ "./bin/before_install_centos.sh",]
archs = [ "x86_64",]

[tool.scikit-build.cmake]
build-type = "Release"

[tool.scikit-build.wheel]
packages = ["src/panda_py"]

[tool.scikit-build.cmake.define]
VACUUM_GRIPPER = "ON"

[tool.pixi.project]
channels = ["jc211", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
eigen = "*"
python = ">=3.10, <3.13"
libfranka = {version = "*", channel="jc211"}
ruckig = {version = "*", channel="jc211"}

[tool.pixi.build-dependencies]
cmake = "~=3.24"
pip = "*"
pybind11 = "*"
pybind11-stubgen = "*"

[tool.pixi.pypi-dependencies]
panda_python = { path = ".", editable = true }

[tool.pixi.environments]
default = {features = [], solve-group = "default"}
examples = {features = ["examples"], solve-group = "default"}
